Fixed styling, layout overflow bug on smaller widths, added initial mobile view, fixed password input

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,5 +1,7 @@
 /* Source: https://tailwindcss.com/docs */
 :root {
+	--navbar-width: 275px;
+	--sidebar-width: 275px;
 	--white-bg-color: rgba(255, 255, 255, 1);
 	--primary-bg-color: rgba(237, 233, 254, 1);
 	--secondary-bg-color: var(--white-bg-color);
@@ -22,7 +24,7 @@
 	--shadow: 0 1px 2px rgba(0, 0, 0, 0.1), 0 1px 1px rgba(0, 0, 0, 0.06);
 	--shadow-md: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
 	--shadow-lg: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
-	--outer-sidebar-padding: 1.5rem;
+	--outer-sidebar-padding: 2rem 1.5rem;
 	--inner-sidebar-padding: 0.5rem;
 	--rounded-sm: 0.25rem;
 	--rounded: 0.5rem;
@@ -33,19 +35,13 @@
 	--scale-transform: scale(1.05);
 }
 
-*, *:before, *:after {
-	box-sizing: inherit;
-}
-
-.App {
-	min-height: 100vh;
-	background-color: var(--primary-bg-color);
+body {
 	font-family: 'Inter', sans-serif;
 	box-sizing: border-box;
-}
-
-.App * {
-	font-family: 'Inter', sans-serif;
+	min-height: 100vh;
+	background-color: var(--primary-bg-color);
+	font-size: 1rem;
+	line-height: 1;
 }
 
 nav ul {
