--- a/frontend/src/components/FriendPreview.css
+++ b/frontend/src/components/FriendPreview.css
@@ -44,7 +44,7 @@
 
 .friendPreview p {
 	margin: 0;
-	font-size: 0.9rem;
+	font-size: 0.95rem;
 	color: var(--secondary-dark-text-color);
 }
 
